@@ -13,13 +13,15 @@ import site.gutschi.humble.spring.tasks.domain.ports.TaskRepository;
 import site.gutschi.humble.spring.tasks.model.Task;
 
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.List;
 import java.util.Optional;
 
 @SpringBootTest
 class UpdateImplementationsTest {
     @Autowired
+    @SuppressWarnings("SpringJavaInjectionPointsAutowiringInspection")
     private UpdateImplementationsUseCase target;
 
     @MockitoBean
@@ -29,9 +31,11 @@ class UpdateImplementationsTest {
     private CheckImplementationCaller checkImplementationCaller;
 
     @Test
-    void updateImplementations() throws MalformedURLException {
-        final var request = new UpdateImplementationsRequest(new URL("https://example.com"));
-        final var responseEntry = new CheckImplementationsResponse.CheckImplementationsResponseEntry("PRO-12", new URL("https://example.com/132"), "Commit 132");
+    void updateImplementations() throws URISyntaxException, MalformedURLException {
+        final var requestUrl = new URI("https://example.com").toURL();
+        final var responseUrl = new URI("https://example.com/132").toURL();
+        final var request = new UpdateImplementationsRequest(requestUrl);
+        final var responseEntry = new CheckImplementationsResponse.CheckImplementationsResponseEntry("PRO-12", responseUrl, "Commit 132");
         final var response = new CheckImplementationsResponse(List.of(responseEntry));
         Mockito.when(checkImplementationCaller.checkForImplementations(request)).thenReturn(response);
         final var task = Mockito.mock(Task.class);
@@ -39,15 +43,18 @@ class UpdateImplementationsTest {
 
         target.updateImplementations(request);
 
-        Mockito.verify(task).addImplementation(new URL("https://example.com/132"), "Commit 132");
+        Mockito.verify(task).addImplementation(responseUrl, "Commit 132");
         Mockito.verify(taskRepository).save(task);
     }
 
     @Test
-    void continueIfError() throws MalformedURLException {
-        final var request = new UpdateImplementationsRequest(new URL("https://example.com"));
-        final var responseEntry1 = new CheckImplementationsResponse.CheckImplementationsResponseEntry("PRO-17", new URL("https://example.com/11"), "Commit 11");
-        final var responseEntry2 = new CheckImplementationsResponse.CheckImplementationsResponseEntry("PRO-12", new URL("https://example.com/132"), "Commit 132");
+    void continueIfError() throws MalformedURLException, URISyntaxException {
+        final var requestUrl = new URI("https://example.com").toURL();
+        final var responseUrl1 = new URI("https://example.com/11").toURL();
+        final var responseUrl2 = new URI("https://example.com/132").toURL();
+        final var request = new UpdateImplementationsRequest(requestUrl);
+        final var responseEntry1 = new CheckImplementationsResponse.CheckImplementationsResponseEntry("PRO-17", responseUrl1, "Commit 11");
+        final var responseEntry2 = new CheckImplementationsResponse.CheckImplementationsResponseEntry("PRO-12", responseUrl2, "Commit 132");
         final var response = new CheckImplementationsResponse(List.of(responseEntry1, responseEntry2));
         Mockito.when(checkImplementationCaller.checkForImplementations(request)).thenReturn(response);
         final var task = Mockito.mock(Task.class);
@@ -56,7 +63,7 @@ class UpdateImplementationsTest {
 
         target.updateImplementations(request);
 
-        Mockito.verify(task).addImplementation(new URL("https://example.com/132"), "Commit 132");
+        Mockito.verify(task).addImplementation(responseUrl2, "Commit 132");
         Mockito.verify(taskRepository).save(task);
     }
 }
